# gefjon-growth

./: .gitignore  .live_docs_last_commit  .mcp.json  CLAUDE.md  HIRING_TRANSFORMATION_SUMMARY.md  PRESENTATION_CONTEXT_COMPLETE.md  README.md  architecture.md  change-log.md  features.md  interfaces.md  maintenance.md  overview.md  prompt.md  pyproject.toml  workflows.md
.amazonq/: context.md  project-guidelines.md  technical-specs.md  workflow-patterns.md
.claude/hooks/: README.md  package.json  skill-activation-prompt.sh  skill-activation-prompt.ts
.claude/skills/: skill-rules.json
.codex/: config.toml
.gemini/: GEMINI.md  tools.yaml
.junie/: guidelines.md
.kiro/steering/: context-engineering.md  project-context.md
ai_docs/aws_bedrock_agents/: 00_aws_meeting_summary.md  01_conceptual_agent_architecture.md  02_complete_hiring_workflow_automation.md  03_technical_implementation_specification.md  (+19 more)
artifacts/public/hiring/candidates/20250811_consolidated/phoenix_005_juyoung_park/pair_programming_phoenix_005/: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/public/hiring/candidates/20250811_consolidated/phoenix_005_juyoung_park/pair_programming_phoenix_005/config/: __init__.py  settings.py
artifacts/public/hiring/candidates/20250811_consolidated/phoenix_005_juyoung_park/pair_programming_phoenix_005/src/: __init__.py  bitmex_client.py  exchange_client.py  health.py  monitoring.py  resilience.py
artifacts/public/hiring/candidates/20250811_consolidated/phoenix_005_juyoung_park/pair_programming_phoenix_005/tests/: __init__.py
artifacts/public/hiring/candidates/20250811_consolidated/phoenix_005_juyoung_park/pair_programming_phoenix_005/tests/integration/: test_exchange_integration.py
artifacts/public/hiring/candidates/20250811_consolidated/phoenix_005_juyoung_park/pair_programming_phoenix_005/tests/unit/: test_bitmex_client.py  test_resilience.py
context/: org.yaml
scripts/: README.md  SCRIPTS_CLEANUP_SUMMARY.md  aggregate_takehome_from_agent.py  complete_workflow_final.py  consolidate_hiring_results.py  evaluate_takehome_and_generate_interview.py  execute_05b_takehome_evaluation.py  generate_complete_materials_enhanced.py  generate_enhanced_materials.py  generate_overall_summary.py  search_bedrock_kb.py  split_candidates.py  validate_hr_context.py  verify_workflow_consistency.py
(+512 files in other folders)
